graphql-parser/tests/snapshots/schemas__interface.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Interface(
                    InterfaceType {
                        position: Pos(1:1),
                        description: None,
                        name: "Bar",
                        directives: [],
                        fields: [
                            Field {
                                position: Pos(2:3),
                                description: None,
                                name: "one",
                                arguments: [],
                                field_type: NamedType(
                                    "Type",
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
