graphql-parser/tests/snapshots/schemas__minimal.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            SchemaDefinition(
                SchemaDefinition {
                    position: Pos(1:1),
                    directives: [],
                    query: Some(
                        "Query",
                    ),
                    mutation: None,
                    subscription: None,
                },
            ),
        ],
    },
)
