graphql-parser/tests/snapshots/schemas__minimal_type.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Object(
                    ObjectType {
                        position: Pos(1:1),
                        description: None,
                        name: "UndefinedType",
                        implements_interfaces: [],
                        directives: [],
                        fields: [],
                    },
                ),
            ),
        ],
    },
)
