graphql-parser/tests/snapshots/schemas__simple_object.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Object(
                    ObjectType {
                        position: Pos(1:1),
                        description: None,
                        name: "Foo",
                        implements_interfaces: [],
                        directives: [],
                        fields: [
                            Field {
                                position: Pos(2:3),
                                description: None,
                                name: "bar",
                                arguments: [],
                                field_type: NamedType(
                                    "Type",
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ],
    },
)
