graphql-parser/tests/snapshots/schemas__union.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeDefinition(
                Union(
                    UnionType {
                        position: Pos(1:1),
                        description: None,
                        name: "Feed",
                        directives: [],
                        types: [
                            "Story",
                            "Article",
                            "Advert",
                        ],
                    },
                ),
            ),
        ],
    },
)
