graphql-parser/tests/snapshots/schemas__union_extension.snap
---
source: graphql-parser/tests/schemas.rs
expression: result
---
Ok(
    Document {
        definitions: [
            TypeExtension(
                Union(
                    UnionTypeExtension {
                        position: Pos(1:8),
                        name: "Feed",
                        directives: [],
                        types: [
                            "Photo",
                            "Video",
                        ],
                    },
                ),
            ),
        ],
    },
)
